--- a/config/database.yml
+++ b/config/database.yml
@@ -23,16 +23,16 @@ default: &default
 
 development:
   <<: *default
-  database: tmp_development
+  database: eies_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: tmp
+  #username: eies
 
   # The password associated with the postgres role (username).
-  #password:
+  #password: eies
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: tmp_test
+  database: eies_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: tmp_production
-  username: tmp
-  password: <%= ENV['TMP_DATABASE_PASSWORD'] %>
+  database: eies_production
+  username: eies
+  password: <%= ENV['EIES_DATABASE_PASSWORD'] %>
